--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -25,7 +25,7 @@
   }
 </style>
 
-<nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
+<nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top" style="z-index: 2;">
     <div class="container-fluid">
       <a class="navbar-brand" href="/listings"><i class="fa-regular fa-compass"></i></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -39,7 +39,7 @@
           </li>
          
         </ul>
-        <ul class="navbar-nav ms-auto">
+        <ul class="navbar-nav search ms-auto">
           <form class="d-flex" role="search">
             <input class="form-control me-2 search-inp" type="search" placeholder="Search Destination" aria-label="Search">
             <button class="btn  search-btn" type="submit"><i class="fa-solid fa-magnifying-glass"></i>Search </button>
