--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -1,3 +1,7 @@
+*{
+    margin: 0%;
+    padding: 0%;
+}
 body{
     font-family: "Sunflower", sans-serif;
     font-weight: 300;
@@ -5,6 +9,8 @@ body{
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    background-color: #fe424d;
+    
 }
 
 .container{
@@ -12,7 +18,6 @@ body{
 }
 
 .navbar{
-    height:5rem;
     background-color: rgb(248, 232, 232);
 }
 .fa-compass{
@@ -113,3 +118,43 @@ footer{
     height: 400px;
     width: 80vh;
 }
+/* .search{
+    background-color: #0d0909;
+   } */
+
+/* responsoivenes */
+@media screen and (max-width: 700px) {
+   .front{
+    display:flex;
+    flex-direction: column;
+   }
+   .search{
+    /* background-color: #0d0909; */
+    width: 20rem;
+    /* float: left; */
+    /* display: block; */
+    margin-right: 20rem;
+  
+   }
+   .search-inp{
+   
+    padding: 1% !important ;
+    margin: 0.5rem !important;
+    text-align: center;
+   }
+   .d-flex{
+    display: flex;
+    flex-direction: column;
+    /* padding: 0.5rem; */
+    width: 15rem;
+    align-items:self-start;
+    /* border:2px solid #0d0909; */
+   }
+   .search-btn{
+    width: 6rem;
+    padding: 1% !important ;
+    margin: 0.5 rem !important;
+    text-align: center;
+    margin-left: 0.5rem;
+   }
+  }
