adding filter service

--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -53,6 +53,10 @@
       padding: 3.5rem;
       text-align: center;
     }
+    .filter a{
+      text-decoration: none;
+      color: inherit; 
+    }
    
   </style>
 
@@ -75,35 +79,35 @@
         
         <div class="filter">
           <div><i class="fa-solid fa-fire"></i></div>
-          <p>Trending</p>
+          <a href="/listings/change/Trending">Trending</a>
         </div>
         <div class="filter">
           <div><i class="fa-solid fa-mountain"></i></div>
-          <p>Mountain</p>
+          <a href="/listings/change/Mountain">Mountain</a>
         </div>
         <div class="filter">
           <div><i class="fa-solid fa-campground"></i></div>
-          <p>Camping</p>
+          <a href="/listings/change/Camping">Camping</a>
         </div>
         <div class="filter">
           <div><i class="fa-solid fa-umbrella-beach"></i></div>
-          <p>Beaches</p>
+          <a href="/listings/change/Beaches">Beaches</a>
         </div>
         <div class="filter">
          <div> <i class="fa-solid fa-water"></i></div>
-          <p>River</p>
+          <a href="/listings/change/River">River</a>
         </div>
         <div class="filter">
           <div> <i class="fa-solid fa-bed"></i></div>
-           <p>Rooms</p>
+           <a href="/listings/change/Rooms">Rooms</a>
          </div>
          <div class="filter">
           <div> <i class="fa-solid fa-mountain-sun"></i></div>
-           <p>Iconic cities</p>
+           <a href="/listings/change/Iconic cities">Iconic cities</a>
          </div>
          <div class="filter">
           <div><i class="fa-brands fa-fort-awesome"></i></div>
-           <p>Castles</p>
+           <a href="/listings/change/Castles">Castles</a>
          </div>
     
          
