--- a/views/listings/newList.ejs
+++ b/views/listings/newList.ejs
@@ -42,6 +42,27 @@
                   </div>
               
             </div>
+            <div class="mb-3">
+
+                <label for="category" class="form-label"><b>select a category</b></label>
+               <select name="listing[category]" id="category">
+                <option value="All" selected>All</option>
+                <option value="Desert">Desert</option>
+                <option value="Trending">Trending</option>
+                <option value="Mountain">Mountain</option>
+                <option value="Camping">Camping</option>
+                <option value="Beaches">Beaches</option>
+                <option value="River">River</option>
+                <option value="Rooms">Rooms</option>
+                <option value="Iconic cities">Iconic cities</option>
+                <option value="Castles">Castles</option>
+                
+               </select>
+                <div class="invalid-feedback">
+                    Please provide a valid price.
+                  </div>
+              
+            </div>
             <div class="row">
 
                 <div class="mb-3 col-md-4">
