--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -118,6 +118,13 @@ footer{
     height: 400px;
     width: 80vh;
 }
+
+.btns{
+    display: flex;
+    max-width: 80%;
+    justify-content: center;
+    margin: auto;
+}
 /* .search{
     background-color: #0d0909;
    } */
@@ -157,4 +164,23 @@ footer{
     text-align: center;
     margin-left: 0.5rem;
    }
+
+   #map{
+    height: 200px;
+    width: 100%;
+}
+
+.btns{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 1rem;
+}
+.my-card img{
+    height: 160px;
+    width: 250 !important;
+    object-fit: contain; 
+}
+
   }
