--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -34,11 +34,12 @@
       justify-content: center;
       border: 1px solid black;
       border-radius: 1rem;
-      height: 3rem;
-      padding: 0.5rem;
-      width: 12rem;
-      font-size: 1.1rem;
+      height: 2.5rem;
+      padding: 0.2rem;
+      width: 10rem;
+      font-size: 1rem;
       text-align: center;
+
       /* float:right; */
     }
     .below{
@@ -103,7 +104,7 @@
          </div>
          <div class="filter">
           <div> <i class="fa-solid fa-mountain-sun"></i></div>
-           <a href="/listings/change/Iconic cities">Iconic cities</a>
+           <a href="/listings/change/Iconic city">Iconic cities</a>
          </div>
          <div class="filter">
           <div><i class="fa-brands fa-fort-awesome"></i></div>
