--- a/views/listings/list.ejs
+++ b/views/listings/list.ejs
@@ -12,7 +12,7 @@
 
                 <h2>List</h2>
             </div>
-            <div class="my-card card col-8 offset-3">
+            <div class="my-card list card col-8 offset-3">
                 <img src="<%= list.image.url %>" class="card-img-top show-img" alt="list_Image" >
                 <div class="card-body">
                     <h5 class="card-title"><b>
